--- a/website/src/content/docs/docs/howtos/Client Generation/05union.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/05union.mdx
@@ -144,7 +144,7 @@ you must use `@sharedRoute`. By default, codegen will generate one method per op
 
 <ClientTabs>
 
-```typespec
+```typespec title=client.tsp
 @sharedRoute
 @route("/foo")
 op a(x: int32): float;
