--- a/website/src/content/docs/docs/howtos/Client Generation/08methodInputs.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/08methodInputs.mdx
@@ -12,7 +12,7 @@ This document outlines the method input signatures that language emitters will g
 
 <ClientTabs>
 
-```typespec
+```typespec title=main.tsp
 @get
 op get(): User;
 ```
