--- a/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
@@ -2,7 +2,7 @@
 title: Client renaming
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import ClientTabs from "@components/client-tabs.astro";
 
 This page documents how to customize names for client generation. For an overview of the setup, please visit the setup page.
 
