--- a/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
@@ -2,7 +2,7 @@
 title: Generated Types
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import ClientTabs from "@components/client-tabs.astro";
 
 This page documents what type definitions in TypeSpec are generated as in emitted libraries
 
