--- a/website/src/content/docs/docs/howtos/Client Generation/00howtogen.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/00howtogen.mdx
@@ -2,7 +2,7 @@
 title: How to generate client libraries
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import ClientTabs from "@components/client-tabs.astro";
 
 This page outlines the steps to build a client library based on your TypeSpec specification. It provides a guide for the whole process from initial API design to the release of SDKs. please visit https://aka.ms/azsdk/dpcodegen.
 
