--- a/website/src/content/docs/docs/howtos/Client Generation/12multipart.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/12multipart.mdx
@@ -2,7 +2,7 @@
 title: Multipart
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import ClientTabs from "@components/client-tabs.astro";
 
 This doc details what emitters will generate for multipart request.
 
