--- a/website/src/content/docs/docs/howtos/Client Generation/11etag.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/11etag.mdx
@@ -2,7 +2,7 @@
 title: Conditional Request Header
 ---
 
-import ClientTabs from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
 
 This doc details what emitters will generate for conditional request header
 
