--- a/website/src/content/docs/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -2,7 +2,7 @@
 title: TypeSpec Type Representation in TCGC
 ---
 
-import ClientTabs from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
 
 This page documents what type definitions in TypeSpec would look like when returned by TCGC
 
