--- a/website/src/content/docs/docs/howtos/Client Generation/03convenient.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/03convenient.mdx
@@ -2,7 +2,7 @@
 title: Convenient method generation
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents how to customize method generation for the emitters. For an overview of the setup, please visit the setup page.
 
