--- a/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
@@ -2,7 +2,7 @@
 title: Client renaming
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents how to customize names for client generation. For an overview of the setup, please visit the setup page.
 
