--- a/website/src/content/docs/docs/howtos/Client Generation/08methodInputs.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/08methodInputs.mdx
@@ -2,7 +2,7 @@
 title: Method Inputs
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This document outlines the method input signatures that language emitters will generate.
 
