--- a/website/src/content/docs/docs/howtos/Client Generation/09versioning.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/09versioning.mdx
@@ -2,7 +2,7 @@
 title: Versioning
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This doc details what emitters will generate for versioned specs
 
