--- a/website/src/content/docs/docs/howtos/Client Generation/10longRunningOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/10longRunningOperations.mdx
@@ -2,7 +2,7 @@
 title: Long-Running Operations
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This doc details what emitters will generate for long-running operations.
 
