--- a/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
@@ -2,7 +2,7 @@
 title: Client hierarchy
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents the default client hierarchy behavior as well as how to customize clients. For an overview of the setup, please visit the previous page.
 
