--- a/website/src/content/docs/docs/howtos/Client Generation/05union.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/05union.mdx
@@ -2,7 +2,7 @@
 title: One path for multiple input/output
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs.astro";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents emitter behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
 
