--- a/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
@@ -10,7 +10,7 @@ This page documents what type definitions in TypeSpec are generated as in emitte
 
 ### Flattening
 
-:::warning
+:::caution
 Flattening is NOT a recommended pattern, and you shouldn't use it unless told by SDK architects.
 :::
 
