--- a/website/src/content/docs/docs/release-notes/release-2024-04-02.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-04-02.md
@@ -6,7 +6,7 @@ title: 0.41.0 March 2024
 
 See TypeSpec Core 0.55 [release notes](https://typespec.io/docs/release-notes/release-2024-04-02)
 
-:::warning
+:::caution
 This release contains breaking changes
 :::
 
