--- a/website/src/content/docs/docs/release-notes/release-2024-05-07.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-05-07.md
@@ -6,7 +6,7 @@ title: 0.42.0 May 2024
 
 See TypeSpec Core 0.56 [release notes](https://typespec.io/docs/release-notes/release-2024-05-07)
 
-:::warning
+:::caution
 This release contains breaking changes
 :::
 
