--- a/website/src/content/docs/docs/release-notes/release-2024-06-11.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-06-11.md
@@ -6,7 +6,7 @@ title: 0.43.0 June 2024
 
 See TypeSpec Core 0.57 [release notes](https://typespec.io/docs/release-notes/release-2024-06-10)
 
-:::warning
+:::caution
 This release contains breaking changes and deprecation
 :::
 
