--- a/website/src/content/docs/docs/release-notes/release-2024-07-16.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-07-16.md
@@ -6,7 +6,7 @@ title: 0.44.0 July 2024
 
 See TypeSpec Core 0.58 [release notes](https://typespec.io/docs/release-notes/release-2024-07-16)
 
-:::warning
+:::caution
 This release contains breaking changes and deprecation
 :::
 
