--- a/website/src/content/docs/docs/release-notes/release-2024-08-06.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-08-06.md
@@ -6,7 +6,7 @@ title: 0.45.0 August 2024
 
 See TypeSpec Core 0.59 [release notes](https://typespec.io/docs/release-notes/release-2024-08-06)
 
-:::warning
+:::caution
 This release contains deprecations and breaking changes
 :::
 
