--- a/website/src/content/docs/docs/release-notes/release-2024-10-09.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-10-09.md
@@ -4,7 +4,7 @@ title: 0.47.0 October 2024
 
 See TypeSpec Core 0.61 [release notes](https://typespec.io/docs/release-notes/release-2024-10-09)
 
-:::warning
+:::caution
 This release contains deprecations and breaking changes
 :::
 
