--- a/website/src/content/docs/docs/release-notes/release-2024-03-05.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-03-05.md
@@ -6,7 +6,7 @@ title: March 2024
 
 See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2024-03-05)
 
-:::warning
+:::caution
 This release contains breaking changes in typespec core.
 :::
 
