--- a/website/src/content/docs/docs/release-notes/release-2024-09-10.md
+++ b/website/src/content/docs/docs/release-notes/release-2024-09-10.md
@@ -6,7 +6,7 @@ title: 0.46.0 September 2024
 
 See TypeSpec Core 0.60 [release notes](https://typespec.io/docs/release-notes/release-2024-09-10)
 
-:::warning
+:::caution
 This release contains deprecations and breaking changes
 :::
 
